src/test/ui/proc-macro/invalid-punct-ident-4.stderr
error: unexpected closing delimiter: `)`
  --> $DIR/invalid-punct-ident-4.rs:6:1
   |
LL | lexer_failure!();
   | ^^^^^^^^^^^^^^^^^ unexpected closing delimiter
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc macro panicked
  --> $DIR/invalid-punct-ident-4.rs:6:1
   |
LL | lexer_failure!();
   | ^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

